# sec_filing_comparison_agent

./: .env.example  .gitignore  INTELLIGENT_FILTERING_SOLUTION.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/: logging.yaml
scripts/: chat_with_sec_agent.py  check_filing_structure.py  check_hartford_raw_content.py  debug_hartford_mda.py  debug_hartford_sections.py  debug_section_content.py  demo_agent.py  demo_enhanced_vs_basic.py  examine_hartford_10k.py  quick_chat.py  test_clean_parsing.py  test_enhanced_agent.py  test_enhanced_with_preprocessing.py  test_hartford_enhanced.py  test_intelligent_filtering.py  test_nested_structure.py  test_preprocessing.py  test_risk_factors_content.py  test_simple_enhanced.py  test_tools.py  test_visual_content.py
src/filing_agent/: __init__.py
src/filing_agent/config/: settings.py
src/filing_agent/core/: anthropic_client.py
src/filing_agent/data/: __init__.py  models.py
src/filing_agent/utils/: filing_parser.py  filing_sections.py
test_output/: hartford_enhanced_structured.json
tests/: test_edgar_client.py
